Writing things that I need to do down

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="container">
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">Hi, I am James Poirier.</h2>
-                    <p class="lead">I have been working on web development on the side, so cut me some slack if it is not fully polished right now.</p>
+                    <h2 class="featurette-heading">Introduction</h2>
+                    <p class="lead">My name is James Poirier and I am currently an EE student minoring in CS at Cal Poly SLO.&nbsp;&nbsp;</p>
                     <blockquote>
                         <p>Content is like water. You put water into a cup it becomes <strong>the cup</strong>.
 							<br>You put water into a bottle it becomes <strong>the bottle</strong>.
