--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
     </nav>
     <!-- Navbar End -->
+	
     <!-- Header -->
     <header class="header">
         <div class="text-box">
@@ -50,49 +51,46 @@
         <div class="container">
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">Introduction</h2>
-                    <p class="lead">My name is James Poirier and I am currently an EE student minoring in CS at Cal Poly SLO.&nbsp;&nbsp;</p>
-                    <blockquote>
-                        <p>Content is like water. You put water into a cup it becomes <strong>the cup</strong>.
-							<br>You put water into a bottle it becomes <strong>the bottle</strong>.
-								<br>You put it in a teapot, it becomes <strong>the teapot</strong>.<br><em>~ Bruce Lee</em>
-                        </p>
-                    </blockquote>
-
+                    <h2 class="featurette-heading">Welcome to my Website!</h2>
+                    <p class="lead">My name is James Poirier and I am currently an Electrical Engineering student minoring in Computer Science attenting Cal Poly SLO.  This is an ongoing personal project of mine to showcase some of the projects that I am working on. <br><br>
+                     I will be posting research that I am working on throughout 2020 as well as messing around with some more HTML and CSS stuff.<br><br> For the most updated information on what I am currently working on please visit my Linkedin or see my resume below:&nbsp; &nbsp;</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="http://hdqwalls.com/wallpapers/neon-marshmello-rh.jpg" alt="background">
+                    <img src="img/PolySealWhite.png" alt="Cal Poly Logo" width="500" height="500">
                 </div>
             </div>
         </div>
     </div>
     <!-- About Me End -->
+	
     <!-- Portfolio -->
     <div id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="project thumbnail">
-                        <a href="https://codepen.io/Chell0/full/rGaXzO/" target="_blank" title="Tribute page">
-                            <img src="https://images.unsplash.com/photo-1457518919282-b199744eefd6?auto=format&fit=crop&w=1052&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
+                        <a href="https://www.provelab.com/" target="_blank" title="ProveLab Solar Car">
+                            <img src="img/Prove.jpg" alt="Prove Lab Logo" width="230">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div class="project thumbnail ">
-                        <a href="https://thimbleprojects.org/ch3ll0h/385389" target="_blank" title="Startup Landing Page">
-                            <img src="https://images.unsplash.com/photo-1477414348463-c0eb7f1359b6?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
+                    <div class="project thumbnail">
+                        <a href="https://thimbleprojects.org/ch3ll0h/385389" target="_blank" title="Tensorflow AI Project">
+                            <img src="img/CNN.png">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div class="project thumbnail ">
+                    <div class="project thumbnail">
                         <a href="https://thimbleprojects.org/ch3ll0h/385804" target="_blank" title="Photo Blog">
-                            <img src="https://images.unsplash.com/photo-1489900464632-5f5907edda24?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
+                            <img src="https://images.unsplash.com/photo-1507031774658-589130daf90c?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                
+				<!--
+				<div class="col-lg-4 col-sm-6">
                     <div class="project thumbnail">
                         <a href="https://codepen.io/Chell0/full/XVyoqa/" target="_blank" title="Website Template">
                             <img src="https://images.unsplash.com/photo-1507031774658-589130daf90c?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
@@ -113,6 +111,7 @@
                         </a>
                     </div>
                 </div>
+				-->
 
             </div>
         </div>
@@ -125,10 +124,12 @@
             <div>
                 <h3>Find me on:</h3>
                 <ul id="contact">
-                    <li><a class="button social" href="https://www.linkedin.com/in/james-poirier1" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
-                    <li><a class="button social" href="https://github.com/jpoirier1" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>
-                    <li><a class="button social" href="https://twitter.com/" target="_blank"><i class="fa fa-fw fa-twitter"></i></a></li>
-                    <li><a class="button social" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official"></i></a></li>
+                    <li><a class="button social" href="https://www.linkedin.com/in/james-poirier1" target="_blank"><i class="fa fa-fw fa-linkedin fa-lg"></i></a></li>
+                    <li><a class="button social" href="https://github.com/jpoirier1" target="_blank"><i class="fa fa-fw fa-github fa-lg"></i></a></li>
+                    <li><a class="button social" href="https://twitter.com/" target="_blank"><i class="fa fa-fw fa-file fa-lg"></i></a></li>
+					<li><a class="button social" href="https://twitter.com/" target="_blank"><i class="fa fa-fw fa-info fa-lg"></i></a></li>
+					<!--<li><a class="button social" href="https://twitter.com/" target="_blank"><i class="fa fa-fw fa-twitter"></i></a></li>
+                    <li><a class="button social" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official"></i></a></li> -->
                 </ul>
             </div>
         </div>
@@ -137,6 +138,7 @@
         </div>
     </footer>
     <!-- Footer End -->
+	
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
