Updating some links and sizes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <h3>Find me on:</h3>
                 <ul id="contact">
                     <li><a class="button social" href="https://www.linkedin.com/in/james-poirier1"><i class="fa fa-fw fa-linkedin fa-lg"></i></a></li>
-                    <li><a class="button social" href="https://github.com/jpoirier1" target="_blank"><i class="fa fa-fw fa-github fa-2x"></i></a></li>
+                    <li><a class="button social" href="https://github.com/jpoirier1" target="_blank"><i class="fa fa-fw fa-github fa-lg"></i></a></li>
                     <li><a class="button social" href="pages/resume/resume.html"><i class="fa fa-fw fa-file fa-lg"></i></a></li>
 					<li><a class="button social" href="pages/info/info.html"><i class="fa fa-fw fa-info fa-lg"></i></a></li>
 					<!--<li><a class="button social" href="https://twitter.com/" target="_blank"><i class="fa fa-fw fa-twitter"></i></a></li>
