Updating some of the links to be placeholders

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
     </header>
     <!-- Header End -->
+	
     <!-- About Me -->
     <div id="about">
         <div class="container">
@@ -76,14 +77,14 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="project thumbnail">
-                        <a href="https://thimbleprojects.org/ch3ll0h/385389" target="_blank" title="Tensorflow AI Project">
+                        <a href="https://jpoirier1.github.io" target="_blank" title="Tensorflow AI Project">
                             <img src="img/CNN.png">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="project thumbnail">
-                        <a href="https://thimbleprojects.org/ch3ll0h/385804" target="_blank" title="Photo Blog">
+                        <a href="https://jpoirier1.github.io" target="_blank" title="Photo Blog">
                             <img src="https://images.unsplash.com/photo-1507031774658-589130daf90c?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
                         </a>
                     </div>
