--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -5,7 +5,8 @@
     <link href="jamesstyle.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-	  <p>James Poirier Resume<br><br>Most recently updated 12/26/19</p>
-	  
+	  	<object data="James_Poirier_Resume_2020.pdf" type="application/pdf" width="100%" height="1200px"> Your browser does not support pdfs, <a href="James_Poirier_Resume_2020.pdf.pdf">
+			click here to download the file.</a> 
+		</object>
   </body>
 </html>
