Adding badge certification

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <div class="col-md-5">
                     <img src="img/PolySealWhite.png" alt="Cal Poly Logo" width="500" height="500">
                 </div>
+		<!--    
+		<iframe width="800" height="1000" src="https://app.openbadges.me/view/#!/collection?collectionid=0a8ba9f7-cfe7-4847-a920-d0495dbb3dba" frameborder="0" allowfullscreen></iframe>
+			End of Badge test -->    
             </div>
         </div>
     </div>
