updating wording on website to reflect 2021

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading">Welcome to my Website!</h2>
-                    <p class="lead">My name is James Poirier and I am currently an Electrical Engineering student minoring in Computer Science attenting Cal Poly SLO.  This is an ongoing personal project of mine to showcase some of the projects that I am working on. <br><br>
-                     I will be posting research that I am working on throughout 2020 as well as messing around with some more HTML and CSS stuff.<br><br> For the most updated information on what I am currently working on please visit my Linkedin or see my resume below:&nbsp; &nbsp;</p>
+                    <p class="lead">My name is James Poirier and I am a recent graduate from Cal Poly San Luis Obispo.  I graduated in 2020 with a degree in Electrical Engineering and a Minor in Computer Science.  This is an ongoing personal project of mine to showcase some of the projects that I am working on. <br><br>
+                     I will be posting projects that I am working on currently, links to things I find interesting, and maybe play around with some React elements when I find the time.<br><br> For the most updated information on what I am currently working on please visit my Linkedin profile or inquire for my resume!&nbsp; &nbsp;</p>
                 </div>
                 <div class="col-md-5">
                     <img src="img/PolySealWhite.png" alt="Cal Poly Logo" width="500" height="500">
