--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">About Us</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">RSVP</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -43,7 +43,7 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Jessica & James</h1>
+                    <h1 class="mx-auto my-0 text-uppercase">Jess & James</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Website Currently in progress.</h2>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Tune in later to see updates on the wedding!</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Notify me!</a>
@@ -58,7 +58,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme.
+                            Boostrap.
                         </p>
                     </div>
                 </div>
