--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">RSVP</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,7 @@
                 </div>
             </div>
         </header>
-
-        <!-- About-->
+        <!-- About
         <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
@@ -65,11 +64,11 @@
                 <img class="img-fluid" src="assets/img/cute1.jpg" alt="James and Jess" />
             </div>
         </section>
-
-        <!-- Projects-->
+    -->
+        <!-- Projects
         <section class="projects-section bg-light" id="projects">
-            <div class="container">
-                <!-- Featured Project Row-->
+            <div class="container">-->
+                <!-- Featured Project Row
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/proposal.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
@@ -78,8 +77,8 @@
                             <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
                         </div>
                     </div>
-                </div>
-                <!-- Project One Row-->
+                </div>-->
+                <!-- Project One Row
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/cute1.jpg" alt="" /></div>
                     <div class="col-lg-6">
@@ -93,9 +92,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
-                <!-- Project Two Row-->
+                <!-- Project Two Row
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/cute1.jpg" alt="" /></div>
                     <div class="col-lg-6 order-lg-first">
@@ -111,7 +110,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
         <!-- Signup-->
         <section class="signup-section" id="signup">
