--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Poirier Wedding</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/JJ_Logo2.png" />
+        <link rel="icon" type="image/x-icon" href="assets/img/P_Website-03.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -18,7 +18,7 @@
 
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">RSVP</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,11 +27,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Our Story</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Guest Info</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="pages/about.html">Our Story</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Wedding Party</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Guest Info</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Venue</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Registry</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Wedding Party</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">FAQ</a></li>
 
 
@@ -138,7 +139,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Grand Tradition Way, Fallbrook 92028</div>
                             </div>
                         </div>
                     </div>
@@ -148,7 +149,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="mailto:jpoirierwedding@gmail.com!">jpoirierwedding@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +159,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">(858) ---.----</div>
                             </div>
                         </div>
                     </div>
